--- a/packages/geonho.com/package.json
+++ b/packages/geonho.com/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "./node_modules/.bin/tsc"
   },
@@ -20,5 +21,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "typescript": "^3.3.4000"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.1"
   }
 }
