--- a/packages/geonho.com/package.json
+++ b/packages/geonho.com/package.json
@@ -2,11 +2,10 @@
   "name": "geonho.com",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "tsc && node build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "./node_modules/.bin/tsc"
+    "start": "ts-node src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -23,6 +22,7 @@
     "typescript": "^3.3.4000"
   },
   "devDependencies": {
-    "@types/express": "^4.16.1"
+    "@types/express": "^4.16.1",
+    "ts-node": "^8.0.3"
   }
 }
