--- a/packages/geonho.com/package.json
+++ b/packages/geonho.com/package.json
@@ -18,11 +18,9 @@
   },
   "homepage": "https://gitlab.com/hrg921/geonho.com#readme",
   "dependencies": {
-    "express": "^4.16.4",
-    "typescript": "^3.3.4000"
-  },
-  "devDependencies": {
     "@types/express": "^4.16.1",
-    "ts-node": "^8.0.3"
+    "express": "^4.16.4",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.3.4000"
   }
 }
