init apollo server

--- a/packages/geonho.com/package.json
+++ b/packages/geonho.com/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://gitlab.com/hrg921/geonho.com#readme",
   "dependencies": {
     "@types/express": "^4.16.1",
-    "express": "^4.16.4",
+    "apollo-server": "^2.4.8",
+    "graphql": "^14.2.0",
     "ts-node": "^8.0.3",
     "typescript": "^3.3.4000"
   }
