--- a/packages/geonho.com/package.json
+++ b/packages/geonho.com/package.json
@@ -19,9 +19,13 @@
   "homepage": "https://gitlab.com/hrg921/geonho.com#readme",
   "dependencies": {
     "@types/express": "^4.16.1",
+    "@types/graphql": "^14.2.0",
     "apollo-server": "^2.4.8",
+    "class-transformer": "^0.2.0",
     "graphql": "^14.2.0",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^8.0.3",
+    "type-graphql": "^0.17.1",
     "typescript": "^3.3.4000"
   }
 }
