--- a/packages/geonho.com/package.json
+++ b/packages/geonho.com/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/index.ts",
     "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,12 +21,19 @@
   "dependencies": {
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.2.0",
+    "@types/mongoose": "^5.3.24",
     "apollo-server": "^2.4.8",
     "class-transformer": "^0.2.0",
     "graphql": "^14.2.0",
+    "mongodb": "^3.2.2",
+    "mongoose": "^5.4.20",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.0.3",
     "type-graphql": "^0.17.1",
+    "typegoose": "^5.6.0",
     "typescript": "^3.3.4000"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
