--- a/packages/geonho.com/package.json
+++ b/packages/geonho.com/package.json
@@ -1,39 +1,54 @@
 {
-  "name": "geonho.com",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/index.ts",
-    "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@gitlab.com/hrg921/geonho.com.git"
-  },
-  "author": "",
-  "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://gitlab.com/hrg921/geonho.com/issues"
-  },
-  "homepage": "https://gitlab.com/hrg921/geonho.com#readme",
-  "dependencies": {
-    "@types/express": "^4.16.1",
-    "@types/graphql": "^14.2.0",
-    "@types/mongoose": "^5.3.24",
-    "apollo-server": "^2.4.8",
-    "class-transformer": "^0.2.0",
-    "graphql": "^14.2.0",
-    "mongodb": "^3.2.2",
-    "mongoose": "^5.4.20",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.0.3",
-    "type-graphql": "^0.17.1",
-    "typegoose": "^5.6.0",
-    "typescript": "^3.3.4000"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.10"
-  }
+    "name": "geonho.com",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.ts",
+    "scripts": {
+        "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/index.ts",
+        "prettier": "prettier --write",
+        "start": "ts-node src/index.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@gitlab.com/hrg921/geonho.com.git"
+    },
+    "author": "",
+    "license": "UNLICENSED",
+    "bugs": {
+        "url": "https://gitlab.com/hrg921/geonho.com/issues"
+    },
+    "homepage": "https://gitlab.com/hrg921/geonho.com#readme",
+    "dependencies": {
+        "@types/express": "^4.16.1",
+        "@types/graphql": "^14.2.0",
+        "@types/mongoose": "^5.3.24",
+        "apollo-server": "^2.4.8",
+        "class-transformer": "^0.2.0",
+        "graphql": "^14.2.0",
+        "mongodb": "^3.2.2",
+        "mongoose": "^5.4.20",
+        "reflect-metadata": "^0.1.13",
+        "ts-node": "^8.0.3",
+        "type-graphql": "^0.17.1",
+        "typegoose": "^5.6.0",
+        "typescript": "^3.3.4000"
+    },
+    "devDependencies": {
+        "husky": "^1.3.1",
+        "lint-staged": "^8.1.5",
+        "nodemon": "^1.18.10",
+        "prettier": "^1.16.4"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{ts,json,md}": [
+            "prettier --write",
+            "git add"
+        ]
+    }
 }
