--- a/packages/geonho.com/api/package.json
+++ b/packages/geonho.com/api/package.json
@@ -10,15 +10,10 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
-        "type": "git",
-        "url": "git+ssh://git@gitlab.com/hrg921/geonho.com.git"
+        "type": "git"
     },
     "author": "",
     "license": "UNLICENSED",
-    "bugs": {
-        "url": "https://gitlab.com/hrg921/geonho.com/issues"
-    },
-    "homepage": "https://gitlab.com/hrg921/geonho.com#readme",
     "dependencies": {
         "@types/express": "^4.16.1",
         "@types/graphql": "^14.2.0",
