--- a/packages/geonho.com/private/package.json
+++ b/packages/geonho.com/private/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.0.0-alpha.6",
+    "@material-ui/icons": "^4.0.0-alpha.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.0",
-    "@types/react": "16.8.12",
+    "@types/react": "^16.8.12",
     "@types/react-dom": "16.8.3",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/styled-components": "^4.1.12",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "styled-components": "^4.2.0",
     "typescript": "3.4.1"
   },
   "scripts": {
