--- a/packages/geonho.com/private/package.json
+++ b/packages/geonho.com/private/package.json
@@ -21,7 +21,7 @@
     "typescript": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env=localhost:4000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
