--- a/packages/geonho.com/private/tsconfig.json
+++ b/packages/geonho.com/private/tsconfig.json
@@ -19,6 +19,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
+    "types": [
+      "node"
+    ]
   },
   "include": [
     "src"
