--- a/packages/geonho.com/api/package.json
+++ b/packages/geonho.com/api/package.json
@@ -15,11 +15,13 @@
     "author": "",
     "license": "UNLICENSED",
     "dependencies": {
+        "@types/dotenv": "^6.1.1",
         "@types/express": "^4.16.1",
         "@types/graphql": "^14.2.0",
         "@types/mongoose": "^5.3.24",
         "apollo-server": "^2.4.8",
         "class-transformer": "^0.2.0",
+        "dotenv": "^7.0.0",
         "graphql": "^14.2.0",
         "mongodb": "^3.2.2",
         "mongoose": "^5.4.20",
