--- a/packages/geonho.com/private/package.json
+++ b/packages/geonho.com/private/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.15.1",
     "@material-ui/core": "^4.0.0-alpha.6",
     "@material-ui/icons": "^4.0.0-alpha.1",
     "@types/jest": "24.0.11",
@@ -12,6 +13,8 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
     "apollo-boost": "^0.3.1",
+    "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "react": "^16.8.6",
