--- a/packages/geonho.com/private/package.json
+++ b/packages/geonho.com/private/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.12",
     "apollo-boost": "^0.3.1",
+    "formik": "^1.5.2",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "mobx": "^5.9.4",
