--- a/packages/geonho.com/private/package.json
+++ b/packages/geonho.com/private/package.json
@@ -11,8 +11,9 @@
     "@types/react": "^16.8.12",
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.1",
-    "@types/styled-components": "^4.1.12",
+    "@types/styled-components": "^4.1.14",
     "apollo-boost": "^0.3.1",
+    "dayjs": "^1.8.12",
     "formik": "^1.5.2",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
