--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,7 @@
   },
   "author": "",
   "license": "UNLICENSED",
+  "private": true,
   "dependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
@@ -47,5 +48,6 @@
       "prettier --write",
       "git add"
     ]
-  }
+  },
+  "gitHead": "bad6202a34631c76a787055d3079bd897be96ebc"
 }
