--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "ts-node": "ts-node"
+  },
   "devDependencies": {
-    "lerna": "^3.13.3"
+    "@types/gh-pages": "^2.0.0",
+    "@types/node": "^12.0.0",
+    "chalk": "^2.4.2",
+    "gh-pages": "^2.0.1",
+    "lerna": "^3.13.3",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.5"
   }
 }
