--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,17 @@
-version: 2.1
+version: 2
 
 jobs:
   install-blog-dependencies:
-    working_directory: ~/GeonHo-Tony-Han
     shell: /bin/bash
     docker:
       - image: circleci/node:8
     steps:
-      - run: ls -al
+      - checkout
       - run: bash ./scripts/blog/install.sh
       - persist_to_workspace:
           root: packages/blog
           paths: node_modules
   build-blog:
-    working_directory: ~/GeonHo-Tony-Han
     shell: /bin/bash
     docker:
       - image: circleci/node:8
@@ -23,7 +21,6 @@ jobs:
           root: packages/blog
           paths: public
   deploy-blog:
-    working_directory: ~/GeonHo-Tony-Han
     shell: /bin/bash
     docker:
       - image: circleci/node:8
@@ -32,7 +29,7 @@ jobs:
       - run: npm run ts-node ./scripts/blog/deploy.ts
 
 workflows:
-  version: 2.1
+  version: 2
   build-and-deploy-blog:
     jobs:
       - install-blog-dependencies
