--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
     docker:
       - image: circleci/node:8
     steps:
+      - checkout
       - run: bash ./scripts/blog/build.sh
       - persist_to_workspace:
           root: packages/blog
