--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
     docker:
       - image: circleci/node:8
     steps:
+      - checkout
       - run: npm install
       - run: npm run ts-node ./scripts/blog/deploy.ts
 
