fix by mkdir blog worskpace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
     steps:
       - checkout
       - run: bash ./scripts/blog/install.sh
+      - run:
+          name: make workspace to store node_modules for blog
+          command: mkdir /tmp/blog
       - persist_to_workspace:
           root: /tmp/blog
           paths: packages/blog/node_modules/**/*
