--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - attach_workspace:
           at: /tmp/blog
       - checkout
-      - run: ls
+      - run: echo $PWD
       - run: bash ./scripts/blog/build.sh
       - persist_to_workspace:
           root: .
