--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,11 @@ jobs:
     docker:
       - image: circleci/node:8
     steps:
+      - attach_workspace:
+          at: /tmp/blog
       - checkout
+      - run: sudo apt-get install tree
+      - run: tree
       - run: bash ./scripts/blog/install.sh
       - run: ls
       - persist_to_workspace:
