--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,6 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - run: sudo apt-get install tree
-      - run: tree
-      - run: echo $PWD
-      - run: ls
       - run: bash ./scripts/blog/build.sh
       - persist_to_workspace:
           root: .
@@ -35,8 +31,8 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - checkout
-      - run: npm install
+      - run: git config --global user.email "hrg921@gmail.com"
+      - run: git config --global user.name "GeonHo Tony Han Circle CI Bot"
       - run: npm run ts-node ./scripts/blog/deploy.ts
 
 workflows:
