--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,8 @@ jobs:
           at: .
       - run: git config --global user.email "hrg921@gmail.com"
       - run: git config --global user.name "GeonHo Tony Han Circle CI Bot"
+      - run: git config --global credential.helper wincred
       - run: npm install
-      - run: sudo apt-get install tree
-      - run: tree
       - run: npm run ts-node ./scripts/blog/deploy.ts
 
 workflows:
