--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,5 @@
 version: 2
 
-# BLOG_WORKING_DIRECTORY: &blog_working_directory /tmp/workspace/log
-
 jobs:
   install-blog-dependencies:
     shell: /bin/bash
@@ -31,13 +29,17 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - run: git config --global user.email "hrg921@gmail.com"
-      - run: git config --global user.name "GeonHo Tony Han Circle CI Bot"
-      - add_ssh_keys:
-          fingerprints:
-            - '28:1b:c0:2f:a5:20:e7:5d:e9:12:ba:23:53:32:ce:27'
-      - run: npm install
-      - run: npm run ts-node ./scripts/blog/deploy.ts
+      - run:
+          name: deploy to blog repo
+          command: |
+            cd packages/blog/public
+            git config credential.helper 'cache --timeout=120'
+            git config user.email "hrg921@gmail.com"
+            git config user.name "Circle CI, GeonHo Tony Han"
+            git add .
+            git commit -m "Update via CircleCI"
+            # Push quietly to prevent showing the token in log
+            git push -q https://${GITHUB_PERSONAL_TOKEN}@github.com/hrg921/blog.git gh-pages
 
 workflows:
   version: 2
