--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,13 +33,15 @@ jobs:
           name: deploy to blog repo
           command: |
             cd packages/blog/public
+            git init
+            git remote add origin https://github.com/hrg921/blog.git
             git config credential.helper 'cache --timeout=120'
             git config user.email "hrg921@gmail.com"
             git config user.name "Circle CI, GeonHo Tony Han"
             git add .
             git commit -m "Update via CircleCI"
             # Push quietly to prevent showing the token in log
-            git push -q https://${GITHUB_PERSONAL_TOKEN}@github.com/hrg921/blog.git gh-pages
+            git push -q -f https://${GITHUB_PERSONAL_TOKEN}@github.com/hrg921/blog.git
 
 workflows:
   version: 2
