--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
             cd packages/blog/public
             git init
             git remote add origin https://github.com/hrg921/blog.git
+            git checkout -b gh-pages
             git config credential.helper 'cache --timeout=120'
             git config user.email "hrg921@gmail.com"
             git config user.name "Circle CI, GeonHo Tony Han"
