--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
             git config user.email "hrg921@gmail.com"
             git config user.name "Circle CI, GeonHo Tony Han"
             git add .
-            git commit -m "Update via CircleCI"
+            git commit -m "Deploy via CircleCI"
             # Push quietly to prevent showing the token in log
             git push -q -f https://${GITHUB_PERSONAL_TOKEN}@github.com/hrg921/blog.git
 
