chore(financial): add services path for workspace

--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "workspaces": {
+    "packages": [
+      "packages/*",
+      "services/*"
+    ]
   }
 }
