--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
-  "packages": ["packages/*"],
+  "packages": ["packages/*", "services/*"],
   "version": "independent",
-  "npmClient": "yarn"
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
