--- a/packages/private/package.json
+++ b/packages/private/package.json
@@ -11,7 +11,7 @@
     "@types/react": "^16.8.12",
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.1",
-    "@types/styled-components": "^4.1.14",
+    "@types/styled-components": "4.1.8",
     "apollo-boost": "^0.3.1",
     "dayjs": "^1.8.12",
     "formik": "^1.5.2",
