--- a/services/financial/package.json
+++ b/services/financial/package.json
@@ -4,14 +4,21 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
+    "dev:financial": "",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "source-map-support": "^0.5.10"
+    "reflect-metadata": "^0.1.13",
+    "source-map-support": "^0.5.10",
+    "typedi": "^0.8.0",
+    "typeorm": "^0.2.20",
+    "typeorm-typedi-extensions": "^0.2.3"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
-    "@types/node": "^10.12.18",
+    "@types/node": "^12.11.1",
+    "awesome-typescript-loader": "^5.2.1",
+    "serverless-offline": "^6.0.0-alpha.41",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
