--- a/services/financial/serverless.yml
+++ b/services/financial/serverless.yml
@@ -6,9 +6,11 @@ service:
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
+  - serverless-offline
 
 provider:
   name: aws
+  region: ap-northeast-2
   runtime: nodejs10.x
 
 functions:
@@ -18,3 +20,9 @@ functions:
       - http:
           method: get
           path: hello
+  create-account:
+    handler: src/handlers/AccountHandler.createAccount
+    events:
+      - http:
+          method: post
+          path: create-account
