--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "typescript.preferences.importModuleSpecifier": "relative",
   "files.associations": {
     "ios": "cpp",
     "__bit_reference": "cpp",
