--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
+    "start:dev": "lerna run start:dev --parallel --scope graphql-server --scope financial-client",
     "ts-node": "ts-node"
   },
   "devDependencies": {
