--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -36,7 +36,8 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "nodemon": "^1.18.10",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "webpack-node-externals": "^1.7.2"
   },
   "husky": {
     "hooks": {
