--- a/packages/private/package.json
+++ b/packages/private/package.json
@@ -44,6 +44,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "apollo": "^2.8.3"
+    "apollo": "^2.8.3",
+    "webpack-node-externals": "^1.7.2"
   }
 }
