--- a/packages/productivity/package.json
+++ b/packages/productivity/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "webpack-node-externals": "^1.7.2"
+  }
 }
