--- a/services/ability-client/package.json
+++ b/services/ability-client/package.json
@@ -32,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-node-externals": "^1.7.2"
   }
 }
