--- a/services/graphql-server/.gitignore
+++ b/services/graphql-server/.gitignore
@@ -35,3 +35,8 @@ lerna-debug.log*
 
 # type-graphql
 schema.gql
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
